# This file should only contain add_subdirectory(...) one for each test
add_subdirectory(hello)
add_subdirectory(assign-goto)
add_subdirectory(cray_pointers_2)
add_subdirectory(defined_io)
add_subdirectory(execute_command_line)
add_subdirectory(fcvs21_f95) # NIST Fortran Compiler Validation Suite
add_subdirectory(finalization)
add_subdirectory(fp_conversions)
